# VisionCraftAI

./: .env.example  .gitignore  CLAUDE.md  DEFINITIONS.md  DEVELOPMENT_LOG.md  Dockerfile  README.md  STATUS.md  TASKS.md  bandit_report.txt  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json  wrangler.toml
.claude/: DEVELOPMENT_LOG.md  REVENUE_METRICS.md  SESSION_REPORT.md  settings.json
.claude/rules/: global.md  python.md
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: index.py
data/: api_keys.json  credit_balances.json  subscriptions.json
data/collected/competitor/: 2026-01-17_pricing_analysis.json
data/collected/market/: 2026-01-17_market_analysis.json
data/collected/social/: 2026-01-17_hashtag_trends.json
data/contacts/: VCA-20260109001259-3866.json  VCA-20260109001259-4043.json  VCA-20260109001259-5996.json  VCA-20260109001311-1663.json  VCA-20260109001311-5900.json  VCA-20260109001311-6169.json  VCA-20260109012642-3575.json  VCA-20260109012642-4073.json  VCA-20260109012642-9047.json  VCA-20260109013219-1275.json  VCA-20260109013219-1502.json  VCA-20260109013219-5889.json  VCA-20260109024519-4764.json  VCA-20260109024519-7202.json  VCA-20260109024519-9161.json  VCA-20260109024520-4764.json  VCA-20260109024947-1254.json  VCA-20260109024947-2443.json  VCA-20260109024947-7965.json  VCA-20260109035137-6352.json  VCA-20260109035137-7094.json  VCA-20260109035137-9305.json  VCA-20260109035509-1720.json  VCA-20260109035509-2721.json  VCA-20260109035509-8997.json  VCA-20260110112315-7829.json  VCA-20260110112315-7923.json  VCA-20260110112315-9594.json  VCA-20260110112503-0583.json  VCA-20260110112503-0871.json  VCA-20260110112503-4533.json  VCA-20260110124801-0588.json  VCA-20260110124801-1163.json  VCA-20260110124801-8189.json  VCA-20260110124827-1883.json  VCA-20260110124827-5759.json  VCA-20260110124827-8794.json  VCA-20260110125030-1092.json  VCA-20260110125030-2547.json  VCA-20260110125030-7246.json  (+122 more)
data/onboarding/: onboarding_progress.json  trials.json
data/referrals/: referral_codes.json  referrals.json
docs/: API_QUICKSTART.md  DEPLOY_GUIDE.md  MARKETING_STRATEGY.md  PRODUCT_HUNT_LAUNCH.md  USER_GUIDE.md
logs/: usage_data.json
outputs/: .gitkeep
scripts/: deploy_cloudrun.py  load_test.py  quick_deploy.py  setup_cloudflare_tunnel.py  setup_gcloud.py  setup_stripe.py
src/: __init__.py  main.py
src/api/: __init__.py  app.py  contact_routes.py  demo_routes.py  monitoring_routes.py  routes.py  schemas.py
src/api/admin/: __init__.py  dashboard.py  routes.py  schemas.py
src/api/analytics/: __init__.py  manager.py  models.py  routes.py  schemas.py
src/api/auth/: __init__.py  dependencies.py  key_manager.py  models.py  rate_limiter.py  routes.py  schemas.py
src/api/notifications/: __init__.py  email_service.py  manager.py  models.py  routes.py  schemas.py  templates.py
src/api/onboarding/: __init__.py  manager.py  models.py  routes.py  schemas.py
src/api/payment/: __init__.py  credit_manager.py  models.py  routes.py  schemas.py  stripe_client.py  subscription_manager.py
src/api/referral/: __init__.py  manager.py  models.py  routes.py  schemas.py
src/editor/: __init__.py  post_processor.py
src/generator/: __init__.py  batch_processor.py  gemini_client.py  prompt_handler.py
src/utils/: __init__.py  config.py  monitoring.py  retry.py  usage_tracker.py
static/: manifest.json  sw.js
static/css/: dashboard.css  i18n.css  lightbox.css  share.css  style.css
static/js/: app.js  dashboard.js  i18n.js  lightbox.js  share.js
templates/: admin.html  contact.html  dashboard.html  index.html  privacy.html  terms.html
tests/: __init__.py  test_admin.py  test_analytics.py  test_api.py  test_auth.py  test_batch_processor.py  test_config.py  test_contact.py  test_dashboard.py  test_demo.py  test_e2e.py  test_main.py  test_monitoring.py  test_notifications.py  test_onboarding.py  test_payment.py  test_post_processor.py  test_prompt_handler.py  test_referral.py  test_retry.py  test_usage_tracker.py
workers/: index.js
