[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visioncraftai"
version = "1.0.0"
description = "AI画像生成プラットフォーム - Google Gemini APIを活用した高品質画像生成サービス"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "VisionCraftAI Team", email = "contact@visioncraftai.com"}
]
maintainers = [
    {name = "VisionCraftAI Team", email = "support@visioncraftai.com"}
]
keywords = [
    "ai",
    "image-generation",
    "gemini",
    "google-ai",
    "fastapi",
    "saas",
    "api",
    "generative-ai",
    "text-to-image",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://visioncraftai.com"
Documentation = "https://visioncraftai.com/docs"
Repository = "https://github.com/visioncraftai/visioncraftai"
Issues = "https://github.com/visioncraftai/visioncraftai/issues"
Changelog = "https://github.com/visioncraftai/visioncraftai/blob/main/CHANGELOG.md"
dependencies = [
    "google-genai>=1.0.0",
    "google-auth>=2.25.0",
    "Pillow>=10.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "stripe>=11.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
visioncraftai = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
